@@ -33,6 +33,7 @@ console-setup (1.37) UNRELEASED; urgency=low
     to Anders Lagerås, closes: #531292.
   * Support for /etc/console-setup/remap.inc.  Thanks to Adeodato Simó,
     closes: #531478.
+  * Respect the selected choices on <Go Back>.  Thanks to Frans Pop.
 
  -- Otavio Salvador <otavio@ossystems.com.br>  Wed, 20 May 2009 09:02:48 -0300
 
